[ANCHOR-508] SEP-6: Custody integration (#1179)
### Description

This implements the custody service RPC actions. This includes payments
as well as refunds.

### Context

SEP-6 will support custodians.

### Testing

- `./gradlew test`

### Documentation

- [stellar-docs](https://github.com/stellar/stellar-docs/pull/253)

### Known limitations

N/A